- Added map cordinate to clipboard (map)
- Added Image animation management with support for image import from clipboard and load and customizable animation speed.
- Added Tiledata Item and Land Copy and Insert all Settings, into contex menu. And multiple import.

Version : 4.12.5 #XG1
- AminEdit added new features, Body Human display will be expanded, and Mounted.
- Serilog package update.
- IronSoftware.System.Drawing package update.
- Octokit package update.
- Serlog.Sinks.File package update.
- Microsoft.Web.WebVie2 package update.
- Add package AnimatedGif.
- Add support for hued AnimData, export AnimData to Gif.
- Add ability to export design as XML in multi editor plugin.
- Various improvements to RadarCol control.
- - save radarcol on treeview selection change.
  - enable revert, revert all for radarcol changes.
  - add "range items to individual average".
  - add "range items to range average".
  - add filter and checkbox selections.
- Add Copy hex address to clipboard.
- Add Background water and grass added to the picture box in multis.
- External Map Replace expanded in expansion.- 
- Added gif export to Dress and Animation tabs  (author KevinEady)
- Added UOPacker plugin can now unpack multicollection.uop (author Stefano Merotta)
- Added tooltips to tiledata tab (author Dragon Slayer)
- Added edit function in Tiledata tab to edit Cou text files.
- Added occupied item counter Items tab.
- Added Frame Counter.

Version : 4.12.4 #XG1
- Add About revised, removed more Richtextbox and added a matrix animation with the names of the developers, new links, and new information.
- Add Sound Loop.
- Add functionality to update the count of occupied and free sound IDs in real-time when sounds are added, removed, or the view is reloaded.
- Removed Escape key function, changed F2 key function to Ctrl+E, added Space key function to play/stop sound.
- Update Nuget Paket.