@@ -13,6 +13,8 @@ Version : 4.12.6
 - Added map cordinate to clipboard (map)
 - Added Image animation management with support for image import from clipboard and load and customizable animation speed.
 - Added Tiledata Item and Land Copy and Insert all Settings, into contex menu. And multiple import.
+- Added an export function in Gump for all addresses to a text file in decimal or hexadecimal format. 
+  Also added an import function to import from a text file and directory with decimal or hexadecimal image names to the specified address.
 
 Version : 4.12.5
 - AminEdit added new features, Body Human display will be expanded, and Mounted.
